# 1pass-to-pass

./: README.md  main.py  pyproject.toml
common/: run_command.py
op/: __init__.py  cli.py
op/cli/: cli.py
op/models/: __init__.py  base.py  item.py  vault.py
passwrapper/: cli.py
passwrapper/cli/: cli.py
passwrapper/models/: base.py  password.py
